2005-04-23  Hans Breuer  <hans@breuer.org>

	* app/display.c : stop special casing the first display of
	a diagram. Every display now has it's own refernce. The initial
	reference gets dropped when there is no display anymore. See
	diagram_remove_ddisplay(). Fixes bug #300744.

	* app/diapsft2renderer.c : locale independent output
	(Radek Krahl, bug #300847)
	* app/paginate_psprint.c :  fixing use of setlocale() calls
	(Radek Krahl, bug #300886)
	* plug-ins/shape/shape-export.c : fixing use of setlocale() calls
	(Radek Krahl, bug #300889)

	* objects/UML/class.c : fix another crash with the line 
	wrapping code (Gabor Simon, bug #160865)

	* plug-ins/cairo/diacairo.c : image rendering had an endianess 
	issue (or is this working around a libpixman bug?;)

2005-04-21  Lars Clausen  <lars@raeder.dk>

	* lib/polyshape.c (polyshape_update_data): Fixed numpoint off-by-one.

	* shapes/**/*.shape: All shapes now have midpoints.

2005-04-20  Lars Clausen  <lars@raeder.dk>

	* lib/orth_conn.c (orthconn_update_data): Patch from ptasz3k@o2.pl
	(Radek Krahl): Make sure there's enough handles for the line.
	Fixes bug #173031.

	* objects/UML/node.c (node_draw): Better drawing method avoids
	garbage after moving.  Fixes bug #301032.

2005-04-17  Hans Breuer  <hans@breuer.org>

	* plug-ins/cairo/diacairo.c : again adapt to Cairo API 
	changes (whould compile with current cvs and 0.(3|4).0

2005-04-11  Lars Clausen  <lars@raeder.dk>

	* xmldocs.make (all): Fix to put installed docs in right place
	under disable-gnome.

	* doc/en/Makefile.am: Use xml_files var for xml files, EXTRA_DIST
	only for dia.dbk.

	* app/commands.c (help_manual_callback): Patch from p@kapcoweb.com
	(Leonardo Boshell): Use standard gnome help if called with Gnome.

	* app/diapsrenderer.c: Patch from ptasz3k@o2.pl (Radek Krahl): Fix
	locale issues for eps output.  Fixes bug #173135.

2005-04-10  Hans Breuer  <hans@breuer.org>

	* plug-ins/cairo/diacairo.c : adapt to Cairo PNG API 
	changes (somewhat broken)
	